package msg.result.console;
option java_package="com.lxd.protobuf.msg.result.console";
option java_outer_classname="Console";

import "Res_C_AddFile.proto";
import "Res_C_AddFilePart.proto";
import "Res_C_DeleteFile.proto";
import "Res_C_DownloadFile.proto";
import "Res_C_UpdateFile.proto";
import "Res_C_UpdateFilePart.proto";

message Console_{
	optional AddFile_ addFile = 1;
	optional AddFilePart_ addFilePart = 2;
	optional DeleteFile_ deleteFile = 3;
	optional DownloadFile_ downloadFile = 4;
	optional UpdateFile_ updateFile = 5;
	optional UpdateFilePart_ updateFilePart = 6;
}